--- a/src/pages/Search/styles.module.scss
+++ b/src/pages/Search/styles.module.scss
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
 
-    > section:nth-of-type(1) {
+    > section {
         width: 260px;
 
         > div {
@@ -22,29 +22,33 @@
             > ul {
                 padding: 8px 0;
 
-                > li {
-                    padding: 10px 20px;
-                    display: flex;
-                    justify-content: space-between;
-                    align-items: center;
-                    cursor: pointer;
-                    transition: all 50ms ease-in-out;
-                    
-                    &:hover {
-                        background-color: #E8E8E8;
+                > a {
+                    text-decoration: none;
+                    color: black;
 
-                        > .total-results {
-                            background-color: white;
+                    > li {
+                        padding: 10px 20px;
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        transition: all 50ms ease-in-out;
+                        
+                        &:hover {
+                            background-color: #E8E8E8;
+    
+                            > .total-results {
+                                background-color: white;
+                            }
                         }
-                    }
-
-                    > .total-results {
-                        font-size: 15px;
-                        font-weight: 300;
-                        padding: 2px 10px;
-                        border-radius: 8px;
-                        background-color: #E8E8E8;
-                        cursor: pointer;
+    
+                        > .total-results {
+                            font-size: 15px;
+                            font-weight: 300;
+                            padding: 2px 10px;
+                            border-radius: 8px;
+                            background-color: #E8E8E8;
+                            cursor: pointer;
+                        }
                     }
                 }
             }
@@ -64,88 +68,12 @@
         }
     }
 
-    > section:nth-of-type(2) {
+    > div {
         width: 1000px;
         margin-left: 30px;
 
-        > div {
-            display: flex;
-            align-items: center;
-            border-radius: 8px;
-            overflow: hidden;
-            border: 1px solid rgba(227, 227, 227, 1);
-            box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
-            margin-bottom: 20px;
-
-            &:last-child {
-                margin-bottom: 0;
-            }
-
-            > a {
-                > img {
-                    width: 94px;
-                    height: 141px;
-                    object-fit: cover;
-                }
-    
-                > .no-image {
-                    width: 94px;
-                    height: 141px;
-                    background-color: #DBDBDB;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    flex-shrink: 0;
-    
-                    > img {
-                        width: 48px;
-                        height: 48px;
-                        object-fit: cover;
-                    }
-                }
-            }
-
-            > div:last-child {
-                padding: 10px 15px;
-
-                > a {
-                    text-decoration: none;
-                    color: black;
-
-                    > h2 {
-                        display: inline;
-                        font-size: 19px;
-                        font-weight: 600;
-    
-                        &:hover {
-                            color: #666;
-                        }
-                    }
-                }
-
-                > p:nth-of-type(1) {
-                    color: #999;
-                }
-
-                > .overview {
-                    margin-top: 20px;
-                    color: black !important;
-                }
-            }
-        }
-
         > ul {
-            display: flex;
-            justify-content: center;
-
-            > li {
-                list-style: none;
-                font-weight: 600;
-
-                &.active-page {
-                    color: red;
-                }
-            }
+            margin-top: 25px;
         }
     }
 }
@@ -155,8 +83,9 @@
         flex-direction: column;
         align-items: center;
 
-        > section:nth-of-type(2) {
-            margin: 30px 0 0 0;
+        > div {
+            margin-top: 30px;
+            margin-left: 0;
         }
     }
 }
@@ -165,7 +94,7 @@
     .search {
         padding: 30px 10px;
 
-        > section:nth-of-type(2) {
+        > div {
             width: 95%;
         }
     }
