--- a/src/components/Pagination/styles.module.scss
+++ b/src/components/Pagination/styles.module.scss
@@ -3,23 +3,15 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    margin-top: 30px;
 
-    > * {
+    > button {
         margin: 5px 4px 0 4px;
-    }
-
-    > :first-child {
-        margin-left: 0;
-    }
-
-    > :last-child {
-        margin-right: 0;
-    }
-
-    > li {
-        list-style: none;
-        cursor: pointer;
         font-weight: 600;
+        background: none;
+        border: none;
+        font-size: 16px;
+        cursor: pointer;
 
         &.curr-page {
             padding: 2px 8px;
@@ -35,11 +27,11 @@
         }
     }
 
-    > button {
-        background: none;
-        border: none;
-        font-weight: 600;
-        font-size: 16px;
-        cursor: pointer;
+    > :first-child {
+        margin-left: 0;
+    }
+
+    > :last-child {
+        margin-right: 0;
     }
 }
