--- a/src/pages/Cast/components/PeopleInfo/styles.module.scss
+++ b/src/pages/Cast/components/PeopleInfo/styles.module.scss
@@ -9,9 +9,11 @@
     > section {
         display: flex;
         justify-content: space-between;
-        max-width: 900px;
+        width: 900px;
 
         > div {
+            width: 300px;
+
             > h2 {
                 font-size: 22px;
                 font-weight: 600;
@@ -104,6 +106,16 @@
     }
 }
 
+@media only screen and (max-width: 1030px) {
+    .people-info {
+        padding-left: 100px;
+
+        > section {
+            width: 100%;
+        }
+    }
+}
+
 @media only screen and (max-width: 800px) {
     .people-info {
         padding-left: 30px;
@@ -124,20 +136,23 @@
 
         > section {
             flex-direction: column;
+            align-items: center;
 
             > div {
                 display: flex;
                 align-items: center;
                 flex-direction: column;
+                width: 250px;
 
                 > div {
-                    width: 240px;
+                    width: 100%;
                 }
             }
 
             > .cast {
                 border-bottom: 1px solid #d7d7d7;
                 padding-bottom: 20px;
+                margin-right: 0;
                 margin-bottom: 20px;
             }
         }
@@ -148,14 +163,6 @@
     .people-info {
         > span {
             margin-right: 0;
-        }
-
-        > section {
-            > div {
-                > div {
-                    width: 240px;
-                }
-            }
         }
     }
 }
