--- a/src/components/Header/components/MenuModal/styles.module.scss
+++ b/src/components/Header/components/MenuModal/styles.module.scss
@@ -8,18 +8,20 @@
     width: 300px;
 
     > img {
-        width: 29px;
-        height: 29px;
+        width: 40px;
+        height: 40px;
         object-fit: contain;
         cursor: pointer;
-        margin: 20px 0 30px 20px;
+        margin: 20px 0 30px 15px;
+        padding: 5px;
+        padding-left: 0;
     }
 
     > ul {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 0 20px;
+        padding: 0 15px;
 
         &:nth-of-type(2) {
             flex-direction: column;
@@ -28,9 +30,12 @@
             transition-timing-function: ease-in;
 
             > li {
-                margin: 5px 0;
                 text-align: center;
                 color: rgb(3, 37, 65);
+            }
+
+            > .media-link {
+                padding: 5px;
 
                 &:hover {
                     > ul {
@@ -56,7 +61,6 @@
                             padding: 5px 0;
                             padding-right: 0;
                             font-weight: 400;
-                            cursor: pointer;
     
                             &:hover {
                                 background-color: white;
@@ -66,20 +70,22 @@
                     }
                 }
             }
+
+            > .link {
+                font-weight: 600;
+                margin: 5px 0;
+    
+                > a {
+                    padding: 5px;
+                    text-decoration: none;
+                    color: rgba(3, 37, 65, 1);
+                }
+            }
         }
 
         > li {
             list-style: none;
             cursor: pointer;
-        }
-
-        > .link {
-            font-weight: 600;
-
-            > a {
-                text-decoration: none;
-                color: rgba(3, 37, 65, 1);
-            }
         }
 
         > .logo {
@@ -91,6 +97,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                padding: 5px;
 
                 > img {
                     width: 154px;
@@ -118,18 +125,15 @@
         margin-top: 10px;
         transition-timing-function: ease-in;
 
-        > a {
-            color: black;
-            text-decoration: none;
+        > div {
+            border-bottom: 1px solid rgba(227, 227, 227, 1);
         }
 
-        div {
-            border-bottom: 1px solid rgba(227, 227, 227, 1);
-            padding: 0 20px;
-
+        > div:nth-of-type(1) {
             > label {
                 display: flex;
                 align-items: center;
+                padding: 0 20px;
 
                 > img {
                     width: 16px;
@@ -164,6 +168,7 @@
                         object-fit: cover;
                         cursor: pointer;
                         padding: 5px;
+                        margin-right: -6px;
                         filter: brightness(85%);
                         transition: filter 0.05s ease-in;
 
@@ -175,32 +180,43 @@
             }
         }
 
-        .searched {
+        > button {
+            width: 100%;
             display: flex;
-            align-items: center;
-            padding-top: 5px;
-            padding-bottom: 5px;
+            justify-content: center;
+            border: none;
+            background-color: white;
+            outline: none;
             cursor: pointer;
+            border-bottom: 1px solid rgba(227, 227, 227, 1);
             transition-property: background-color;
-            transition-duration: 0.1s;
-            transition-timing-function: ease-in;
+            transition-duration: 0.05s;
+            transition-timing-function: ease-out;
 
             &:hover {
-                background-color: #f8f9fa;
+                background-color: #efefef;
             }
 
-            > img {
-                width: 16px;
-                height: 16px;
-                object-fit: cover;
-            }
+            > div {
+                width: 1300px;
+                padding: 5px 20px;
+                display: flex;
+                align-items: center;
 
-            > p {
-                font-weight: 600;
-                margin-left: 6px;
-
-                > span {
-                    font-weight: normal;
+                > img {
+                    width: 16px;
+                    height: 16px;
+                    object-fit: cover;
+                }
+    
+                > p {
+                    margin-left: 6px;
+                    font-size: 16px;
+                    text-align: left;
+    
+                    > span {
+                        font-weight: 600;
+                    }
                 }
             }
         }
